--- a/技术报告.md
+++ b/技术报告.md
@@ -1,4 +1,4 @@
-# Rust 代码分析系统：死锁与数据竞争检测
+# Rust死锁与数据竞争检测技术报告
 
 ## 1. 概述
 
@@ -43,6 +43,7 @@
 由于 Petri 网的转换涉及复杂的数据流控制，我们采用基于 sanitizer 的方法进行数据竞争检测。目前已经封装了 sanitizer 进行初步测试，并计划根据调用关系自动生成针对 `unsafe` 代码的测试用例。
 
 
-## 限制
+## 下一个版本将支持
 1. 基于Petri网和锁图的分析都是基于函数调用图和指针分析，对于异步函数的支持还存在缺陷，后续课题异步时序检测中将会构造新的函数调用关系来建模异步函数，并进一步优化指针分析的精度。
 2. 数据竞争一般会导致内存问题，主要发生在unsafe代码块中，后续会增加对于unsafe模块的自动测试用例生成，提高性能。
+3. 对于并发bug中非死锁的数据竞争和时序逻辑错误，将采用测试的方法，构造可选的测试引擎，包括loom和afl等，基于给定的bin或者lib包自动构造测试用例。
